samples/_failures_safe/1761251678_5692f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35e14513.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_35e14513.c:175:51: error: expected ‘)’ at end of input
  175 |         for (int i = 0; i < graph->vertex_count; i
      |             ~                                     ^
      |                                                   )
./samples/SAFE/__tmp_35e14513.c:175:9: error: expected declaration or statement at end of input
  175 |         for (int i = 0; i < graph->vertex_count; i
      |         ^~~
./samples/SAFE/__tmp_35e14513.c:175:9: error: expected declaration or statement at end of input
